# PSO_UI

./: .env.example  .gitignore  README.md  clean.bat  install.bat  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  setup.py
docs/: API.md  CHANGELOG.md  常见问题.md  开发者文档.md  快速开始.md  用户手册.md
modules/: __init__.py  config.py  data_importer.py  data_processor.py  nerve_model.py  pso_optimizer.py  visualization.py
tests/: __init__.py  conftest.py  test_data_processor.py  test_integration.py  test_nerve_model.py  test_pso_optimizer.py
ui/: __init__.py  analysis_workflow.py  chart_widgets.py  main_window.py
utils/: __init__.py  data_manager.py  exceptions.py  logger.py
